// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Screen drops horizontal padding when edgeToEdge is set 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#0A0E14",
        "flex": 1,
      }
    }
    testID="screen"
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 0,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <Text>
        content
      </Text>
    </View>
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;

exports[`Screen renders children inside a safe area in dark theme 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#0A0E14",
        "flex": 1,
      }
    }
    testID="screen"
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <Text>
        content
      </Text>
    </View>
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;

exports[`Screen renders children inside a safe area in light theme 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F4F6F9",
        "flex": 1,
      }
    }
    testID="screen"
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <Text>
        content
      </Text>
    </View>
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;
